# controllers/auth.controller.go
@@ -1,13 +1,16 @@
 package controllers
 
 import (
+	"fmt"
 	"net/http"
 	"strings"
-	"time"
 
+	"github.com/MortezaHajilouei/golang-web-server/initializers"
 	"github.com/MortezaHajilouei/golang-web-server/models"
+	"github.com/MortezaHajilouei/golang-web-server/utils"
+
 	"github.com/gin-gonic/gin"
-	"github.com/wpcodevo/golang-gorm-postgres/utils"
+
 	"gorm.io/gorm"
 )
 
@@ -19,7 +22,17 @@ func NewAuthController(DB *gorm.DB) AuthController {
 	return AuthController{DB}
 }
 
-// SignUp User
+// Register godoc
+// @Summary      Register new user
+// @Description  signup user
+// @Tags         auth
+// @Param		 info body models.UserSignUpInput true "Signup"
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  models.UserSignUpInput
+// @Failure      400  {object}	utils.ErrorMessage
+// @Failure      500  {object}	utils.ErrorMessage
+// @Router       /auth/register/ [post]
 func (ac *AuthController) SignUpUser(ctx *gin.Context) {
 	var payload *models.UserSignUpInput
 
@@ -39,22 +52,18 @@ func (ac *AuthController) SignUpUser(ctx *gin.Context) {
 		return
 	}
 
-	now := time.Now()
 	newUser := models.User{
-		Name:      payload.Name,
-		Email:     strings.ToLower(payload.Email),
-		Password:  hashedPassword,
-		Verified:  true,
-		CreatedAt: now,
-		UpdatedAt: now,
+		Name:     payload.Name,
+		Email:    strings.ToLower(payload.Email),
+		Password: hashedPassword,
 	}
-
 	result := ac.DB.Create(&newUser)
 
-	if result.Error != nil && strings.Contains(result.Error.Error(), "duplicate key value violates unique") {
+	if result.Error != nil && strings.Contains(result.Error.Error(), "duplicated key not allowed") {
 		ctx.JSON(http.StatusConflict, gin.H{"status": "fail", "message": "User with that email already exists"})
 		return
 	} else if result.Error != nil {
+		fmt.Printf(result.Error.Error())
 		ctx.JSON(http.StatusBadGateway, gin.H{"status": "error", "message": "Something bad happened"})
 		return
 	}
@@ -70,89 +79,88 @@ func (ac *AuthController) SignUpUser(ctx *gin.Context) {
 }
 
 func (ac *AuthController) SignInUser(ctx *gin.Context) {
-	// var payload *models.SignInInput
+	var payload *models.UserSignInInput
 
-	// if err := ctx.ShouldBindJSON(&payload); err != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
-	// 	return
-	// }
+	if err := ctx.ShouldBindJSON(&payload); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
 
-	// var user models.User
-	// result := ac.DB.First(&user, "email = ?", strings.ToLower(payload.Email))
-	// if result.Error != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Invalid email or Password"})
-	// 	return
-	// }
+	var user models.User
+	result := ac.DB.First(&user, "email = ?", strings.ToLower(payload.Email))
+	if result.Error != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Invalid email or Password"})
+		return
+	}
 
-	// if err := utils.VerifyPassword(user.Password, payload.Password); err != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Invalid email or Password"})
-	// 	return
-	// }
+	if err := utils.VerifyPassword(user.Password, payload.Password); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": "Invalid email or Password"})
+		return
+	}
 
-	// config, _ := initializers.LoadConfig(".")
+	config, _ := initializers.LoadConfig(".")
 
-	// // Generate Tokens
-	// access_token, err := utils.CreateToken(config.AccessTokenExpiresIn, user.ID, config.AccessTokenPrivateKey)
-	// if err != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
-	// 	return
-	// }
+	// Generate Tokens
+	access_token, err := utils.CreateToken(config.AccessTokenExpiresIn, user.ID, config.AccessTokenPrivateKey)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
 
-	// refresh_token, err := utils.CreateToken(config.RefreshTokenExpiresIn, user.ID, config.RefreshTokenPrivateKey)
-	// if err != nil {
-	// 	ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
-	// 	return
-	// }
+	refresh_token, err := utils.CreateToken(config.RefreshTokenExpiresIn, user.ID, config.RefreshTokenPrivateKey)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
 
-	// ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
-	// ctx.SetCookie("refresh_token", refresh_token, config.RefreshTokenMaxAge*60, "/", "localhost", false, true)
-	// ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
+	ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
+	ctx.SetCookie("refresh_token", refresh_token, config.RefreshTokenMaxAge*60, "/", "localhost", false, true)
+	ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
 
-	// ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
+	ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
 }
 
-// Refresh Access Token
 func (ac *AuthController) RefreshAccessToken(ctx *gin.Context) {
-	// message := "could not refresh access token"
+	message := "could not refresh access token"
 
-	// cookie, err := ctx.Cookie("refresh_token")
+	cookie, err := ctx.Cookie("refresh_token")
 
-	// if err != nil {
-	// 	ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": message})
-	// 	return
-	// }
+	if err != nil {
+		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": message})
+		return
+	}
 
-	// config, _ := initializers.LoadConfig(".")
+	config, _ := initializers.LoadConfig(".")
 
-	// sub, err := utils.ValidateToken(cookie, config.RefreshTokenPublicKey)
-	// if err != nil {
-	// 	ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
-	// 	return
-	// }
+	sub, err := utils.ValidateToken(cookie, config.RefreshTokenPublicKey)
+	if err != nil {
+		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
 
-	// var user models.User
-	// result := ac.DB.First(&user, "id = ?", fmt.Sprint(sub))
-	// if result.Error != nil {
-	// 	ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": "the user belonging to this token no logger exists"})
-	// 	return
-	// }
+	var user models.User
+	result := ac.DB.First(&user, "id = ?", fmt.Sprint(sub))
+	if result.Error != nil {
+		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": "the user belonging to this token no logger exists"})
+		return
+	}
 
-	// access_token, err := utils.CreateToken(config.AccessTokenExpiresIn, user.ID, config.AccessTokenPrivateKey)
-	// if err != nil {
-	// 	ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
-	// 	return
-	// }
+	access_token, err := utils.CreateToken(config.AccessTokenExpiresIn, user.ID, config.AccessTokenPrivateKey)
+	if err != nil {
+		ctx.AbortWithStatusJSON(http.StatusForbidden, gin.H{"status": "fail", "message": err.Error()})
+		return
+	}
 
-	// ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
-	// ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
+	ctx.SetCookie("access_token", access_token, config.AccessTokenMaxAge*60, "/", "localhost", false, true)
+	ctx.SetCookie("logged_in", "true", config.AccessTokenMaxAge*60, "/", "localhost", false, false)
 
-	// ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
+	ctx.JSON(http.StatusOK, gin.H{"status": "success", "access_token": access_token})
 }
 
 func (ac *AuthController) LogoutUser(ctx *gin.Context) {
-	// ctx.SetCookie("access_token", "", -1, "/", "localhost", false, true)
-	// ctx.SetCookie("refresh_token", "", -1, "/", "localhost", false, true)
-	// ctx.SetCookie("logged_in", "", -1, "/", "localhost", false, false)
+	ctx.SetCookie("access_token", "", -1, "/", "localhost", false, true)
+	ctx.SetCookie("refresh_token", "", -1, "/", "localhost", false, true)
+	ctx.SetCookie("logged_in", "", -1, "/", "localhost", false, false)
 
-	// ctx.JSON(http.StatusOK, gin.H{"status": "success"})
+	ctx.JSON(http.StatusOK, gin.H{"status": "success"})
 }
