# controllers/job.controller.go
@@ -1,0 +1,41 @@
+package controllers
+
+import (
+	"log"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/gocraft/work"
+	"github.com/gomodule/redigo/redis"
+)
+
+// Make a redis pool
+var redisPool = &redis.Pool{
+	MaxActive: 5,
+	MaxIdle:   5,
+	Wait:      true,
+	Dial: func() (redis.Conn, error) {
+		return redis.Dial("tcp", ":6379")
+	},
+}
+
+// Make an enqueuer with a particular namespace
+var enqueuer = work.NewEnqueuer("my_app_namespace", redisPool)
+
+// Job godoc
+// @Summary      Job test
+// @Description  Job test
+// @Tags         Job
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Failure      400  {object}	utils.ErrorMessage
+// @Failure      500  {object}	utils.ErrorMessage
+// @Router       /job/ [get]
+func Job1(ctx *gin.Context) {
+	_, err := enqueuer.Enqueue("send_email", work.Q{"address": "test@example.com", "subject": "hello world", "customer_id": 4})
+	if err != nil {
+		log.Fatal(err)
+	}
+	ctx.Status(http.StatusCreated)
+}
